trunk/Archive2/cf/fbc08ab2fc9d90/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:16:9: error: 'int A::x' conflicts with a previous declaration
     int x;
         ^
main.cpp:13:10: note: previous declaration 'int& A::x() const'
     int& x() const { return x; }
          ^
main.cpp: In member function 'int& A::x() const':
main.cpp:13:29: error: invalid initialization of non-const reference of type 'int&' from an rvalue of type '<unresolved overloaded function type>'
     int& x() const { return x; }
                             ^
main.cpp:13:32: warning: control reaches end of non-void function [-Wreturn-type]
     int& x() const { return x; }
                                ^
